--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.radial {
+		&--purpleBlue {
+			background: radial-gradient(
+					50% 50% at 50% 50%,
+					#f52858b6 0%,
+					rgba(222, 196, 167, 0) 100%
+				),
+				radial-gradient(
+					50% 50% at 50% 50%,
+					#0085ff 0%,
+					rgba(222, 196, 167, 0) 100%
+				);
+		}
+		&--purple {
+			background: radial-gradient(
+				50% 50% at 50% 50%,
+				#4859f2 0%,
+				rgba(222, 196, 167, 0) 100%
+			);
+		}
+	}
+}
