--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,12 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
+@layer base {
 	body {
 		@apply overflow-x-hidden;
 	}
 }
 @layer components {
+	.container {
+		@apply mx-auto;
+	}
 	.radial {
 		@apply absolute -z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
 		@apply w-screen h-screen overflow-x-hidden;
@@ -45,8 +48,36 @@
 					rgba(222, 196, 167, 0) 100%
 				);
 		}
+		&--blue::before {
+			background: radial-gradient(
+				51.02% 51.02% at 49.96% 48.98%,
+				#0085ff 0%,
+				rgba(255, 0, 184, 0) 77.6%
+			);
+		}
+	}
+
+	// Table
+	table {
+		@apply w-full;
+		th,
+		td {
+			@apply px-4 py-10 text-lg font-normal text-center;
+		}
+		td {
+			@apply px-6;
+		}
+	}
+
+	@layer utilities {
+		.bg-curve {
+			&--toLeft {
+				clip-path: polygon(0 8%, 100% 0, 100% 100%, 0% 100%);
+			}
+		}
 	}
 }
+
 // Swiper
 // .swiper-slide:not(.swiper-slide-active) {
 // 	@apply -translate-x-8;
